--- a/templates/completed.html
+++ b/templates/completed.html
@@ -8,18 +8,26 @@
     <p>{{ message }}</p>
     {% endif %}
     <p>Please select the Major Power you would like to add to your character:</p> -->
-		<h2>Choose an Activity</h2>
+		<h2>Completed Activities</h2>
+		<p>You may add photos to completed activities by selecting them and adding the photos on the next page.</p>
 	</section>
 	<section class="form-body">
 		<section class="picker-category get-moving-section">
 			<h3>Get Moving <span>{{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
@@ -27,12 +35,19 @@
 		<section class="picker-category investigate-section">
 			<h3>Investigate <span>{{ data['score']['categories']['Investigate']['completed'] }} &#47;2</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
@@ -40,12 +55,19 @@
 		<section class="picker-category serve-section">
 			<h3>Serve <span>{{ data['score']['categories']['Serve']['completed'] }} &#47;2</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
@@ -53,12 +75,19 @@
 		<section class="picker-category outdoor-skills-section">
 			<h3>Outdoor Skills <span>{{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
@@ -66,12 +95,19 @@
 		<section class="picker-category create-section">
 			<h3>Create <span>{{ data['score']['categories']['Create']['completed'] }} &#47;2</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
@@ -79,12 +115,19 @@
 		<section class="picker-category just-for-fun-section">
 			<h3>Just For Fun <span>{{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
@@ -92,12 +135,19 @@
 		<section class="picker-category know-your-parks-section">
 			<h3>Know Your Parks <span>{{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
-				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False %}
+				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == True %}
 				<div class="picker {{ loop.cycle('odd', 'even') }}">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
 			      </label>
+				  {% if data[activity]['thumb_list'] %}
+				  	<section class="pic-list">
+				  		{% for thumb in data[activity]['thumb_list'] %}
+							<img src="{{ url_for('static', filename='long_term_storage/' + family + '/thumbs/' + thumb) }}" />
+						{% endfor %}
+					</section>
+				  {% endif %}
 				</div>
 				{% endif %}
 			{% endfor %}
