--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,78 @@
+/* .topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav ul li a {
+    color: #f2f2f2;
+    text-decoration: none;
+    font-size: 17px;
+    line-height: 200%;
+    width: 200px;
+    height: 20px
+	display: block;
+	background-color: red;
+}
+
+.topnav ul li {
+    list-style-type: none;
+    display: block;
+    width: 100%;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+} */
+
+body {
+	margin: 0;
+	padding: 0;
+}
+
+nav {
+
+	background-color: #333;
+}
+
+.topnav {
+	background-color: #333;
+	position: relative
+	min-height: 50px;
+
+}
+
+.topnav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: none;
+}
+
+.topnav ul li {
+	position: relative;
+	background-color: red;
+}
+
+.topnav ul li a {
+	color: #fff;
+	text-decoration: none;
+	background-color: blue;
+	padding: 15px;
+	display: block;
+}
+
+
+.topnav span {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 15px 15px 0 0;
+}
+
+
+
+
 .form-div {
-	margin: 20px;
-	
+    margin: 20px;
 }
