messed with scripts
yup

--- a/templates/activity_picker.html
+++ b/templates/activity_picker.html
@@ -111,10 +111,10 @@
 
 
 {% endblock %} {% block script %}
-<script>
+<!-- <script>
 	$(":radio").click(function() {
 		$(this).closest("div").addClass("active").
 		siblings("div.active").removeClass("active");
 	});
-</script>
+</script> -->
 {% endblock %}
