--- a/templates/priority_list.html
+++ b/templates/priority_list.html
@@ -112,10 +112,10 @@
 <p><a href='/priority_picker'>Add an activity</a></p>
 
 {% endblock %} {% block script %}
-<script>
+<!-- <script>
 	$(":radio").click(function() {
 		$(this).closest("div").addClass("active").
 		siblings("div.active").removeClass("active");
 	});
-</script>
+</script> -->
 {% endblock %}
