--- a/templates/collect_info.html
+++ b/templates/collect_info.html
@@ -54,10 +54,10 @@
 
 
 {% endblock %} {% block script %}
-<script>
+<!-- <script>
 	$(":radio").click(function() {
 		$(this).closest("div").addClass("active").
 		siblings("div.active").removeClass("active");
 	});
-</script>
+</script> -->
 {% endblock %}
