--- a/templates/priority_picker.html
+++ b/templates/priority_picker.html
@@ -13,10 +13,10 @@
 		<h2>Add to Priority List</h2>
 		<p>Select activities in the top section to <em>add to</em> the priority list</p>
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving <span>{{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
+			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -29,10 +29,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category investigate-section">
-			<h3>Investigate <span>{{ data['score']['categories']['Investigate']['completed'] }} &#47;3</span></h3>
+			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -45,10 +45,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category serve-section">
-			<h3>Serve <span>{{ data['score']['categories']['Serve']['completed'] }} &#47;3</span></h3>
+			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -61,10 +61,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills <span>{{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
+			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -77,10 +77,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category create-section">
-			<h3>Create <span>{{ data['score']['categories']['Create']['completed'] }} &#47;3</span></h3>
+			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -93,10 +93,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun <span>{{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
+			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -109,10 +109,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks <span>{{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
+			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == False %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -128,10 +128,10 @@
 		<h2>Remove from Priority List</h2>
 		<p>Select activities in the bottom section to <em>remove from</em> the priority list</p>
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving <span>{{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
+			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -144,10 +144,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category investigate-section">
-			<h3>Investigate <span>{{ data['score']['categories']['Investigate']['completed'] }} &#47;3</span></h3>
+			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -160,10 +160,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category serve-section">
-			<h3>Serve <span>{{ data['score']['categories']['Serve']['completed'] }} &#47;3</span></h3>
+			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -176,10 +176,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills <span>{{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
+			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -192,10 +192,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category create-section">
-			<h3>Create <span>{{ data['score']['categories']['Create']['completed'] }} &#47;3</span></h3>
+			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -208,10 +208,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun <span>{{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
+			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -224,10 +224,10 @@
 		</section><!-- end picker-category -->
 
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks <span>{{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
+			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-			<div class="picker {{ loop.cycle('odd', 'even') }}">
+			<div class="picker">
 				<div class="checklist">
 					<label class="container-ck">{{ data[activity]['Activity'] }} - {{ data[activity]['Points'] }}
       					<input type="checkbox" name="priority_toggle" value="{{ data[activity]['Activity'] }}">
@@ -245,4 +245,22 @@
 
 
 
+{% endblock %} {% block script %}
+<script type="text/javascript">
+	jQuery(function(){
+		menuFunction();
+		oddSpotter();
+	});
+
+	function menuFunction(){
+		$(".score").click(function(){
+		$("#hider").toggle(1000);
+		});
+	}
+
+	function oddSpotter(){
+		$( ".picker:odd" ).css( "background-color", "#999999" );
+	}
+
+</script>
 {% endblock %}
