--- a/templates/priority_list.html
+++ b/templates/priority_list.html
@@ -13,10 +13,10 @@
 	</section>
 	<section class="form-body">
 		<section class="picker-category get-moving-section">
-			<h3>Get Moving <span>{{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
+			<h3>Get Moving<span> - {{ data['score']['categories']['Get Moving']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Get Moving' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity'] }}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -26,10 +26,10 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category investigate-section">
-			<h3>Investigate <span>{{ data['score']['categories']['Investigate']['completed'] }} &#47;2</span></h3>
+			<h3>Investigate<span> - {{ data['score']['categories']['Investigate']['completed'] }} &#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Investigate' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -39,10 +39,10 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category serve-section">
-			<h3>Serve <span>{{ data['score']['categories']['Serve']['completed'] }} &#47;2</span></h3>
+			<h3>Serve<span> - {{ data['score']['categories']['Serve']['completed'] }} &#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Serve' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -52,10 +52,10 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category outdoor-skills-section">
-			<h3>Outdoor Skills <span>{{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
+			<h3>Outdoor Skills<span> - {{ data['score']['categories']['Outdoor Skills']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Outdoor Skills' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -65,10 +65,10 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category create-section">
-			<h3>Create <span>{{ data['score']['categories']['Create']['completed'] }} &#47;2</span></h3>
+			<h3>Create<span> - {{ data['score']['categories']['Create']['completed'] }} &#47;2</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Create' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -78,10 +78,10 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category just-for-fun-section">
-			<h3>Just For Fun <span>{{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
+			<h3>Just For Fun<span> - {{ data['score']['categories']['Just For Fun']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Just For Fun' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -91,10 +91,10 @@
 			{% endfor %}
 		</section>
 		<section class="picker-category know-your-parks-section">
-			<h3>Know Your Parks <span>{{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
+			<h3>Know Your Parks<span> - {{ data['score']['categories']['Know Your Parks']['completed'] }} &#47;3</span></h3>
 			{% for activity in data %}
 				{% if data[activity]['Category'] == 'Know Your Parks' and data[activity]['is_complete'] == False and data[activity]['is_target'] == True %}
-				<div class="picker {{ loop.cycle('odd', 'even') }}">
+				<div class="picker">
 					<label class="container">{{ data[activity]['Activity']}}
 			        <input type="radio" name="activity_selected" value="{{ data[activity]['Activity'] }}">
 			        <span class="checkmark"></span>
@@ -112,10 +112,21 @@
 <p><a href='/priority_picker'>Add an activity</a></p>
 
 {% endblock %} {% block script %}
-<!-- <script>
-	$(":radio").click(function() {
-		$(this).closest("div").addClass("active").
-		siblings("div.active").removeClass("active");
+<script type="text/javascript">
+	jQuery(function(){
+		menuFunction();
+		oddSpotter();
 	});
-</script> -->
+
+	function menuFunction(){
+		$(".score").click(function(){
+		$("#hider").toggle(1000);
+		});
+	}
+
+	function oddSpotter(){
+		$( ".picker:odd" ).css( "background-color", "#999999" );
+	}
+
+</script>
 {% endblock %}
